<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BC LAND</string>
    <string name="more">Look at more</string>
    <string name="open_up">Open up vip</string>
    <string name="vip_center">VIP purchase center</string>
    <string name="buy_vip">Confirm the purchase</string>
    <string name="search">Search</string>
    <string name="my_wallet">My wallet</string>
    <string name="transaction_record">Transaction record</string>
    <string name="total_balance">Total balance</string>
    <string name="Can_be_presented">Can be presented</string>
    <string name="no_mention">Cannot be presented</string>
    <string name="copy">Copy</string>
    <string name="purse_address">Purse address</string>
    <string name="pp_recharge">Recharge</string>
    <string name="pp_transfer">Transfer</string>
    <string name="pp_currency">Currency</string>
    <string name="sign_immediately">Sign in immediately</string>
    <string name="sign_7day">Continuous sign up for 7 days, extra bonus 5 coins.</string>
    <string name="apply_bc">Apply for BC</string>
    <string name="earn_pp">Earn PP coins immediately</string>
    <string name="what_pp">What is PP currency?</string>
    <string name="how_pp">How to get PP coins?</string>
    <string name="does_pp">How does PP currency transfer?</string>
    <string name="how_to_pp">How to withdraw cash in PP currency?</string>
    <string name="cancel_pp">How to cancel automatic renewal?</string>
    <string name="common_problem">Common problem</string>
    <string name="to_apply">Ascertain the application</string>
    <string name="apply_name">Full name</string>
    <string name="write_applay_name">Please input your name.</string>
    <string name="apply_company">Company</string>
    <string name="write_apply_company">Please input your company.</string>
    <string name="apply_position">Position</string>
    <string name="write_apply_position">Please enter the company\'s position.</string>
    <string name="apply_email">Mailbox</string>
    <string name="write_apply_email">Please input your mailbox.</string>
    <string name="apply_phone">Telephone</string>
    <string name="write_apply_phone">Please input your telephone number.</string>
    <string name="my_collage">My collage</string>
    <string name="confirm_recharge">Confirm the recharge</string>
    <string name="recharge_num">Please select the amount of recharge.</string>
    <string name="free_book">Free Auditions</string>
    <string name="expert_course">Expert course</string>
    <string name="faq_always">Common problem</string>
    <string name="service">Contact Customer Service</string>
    <string name="setting">Settings</string>
    <string name="competitive_book">Excellent course</string>
    <string name="check_net">Please check the network connection.</string>
    <string name="date_over">Data loading completed</string>
    <string name="book_detail">Course Details</string>
    <string name="free_get">Free collection</string>
    <string name="no_comment">No more comments</string>
    <string name="fail_comment">Failure to get comments</string>
    <string name="play">Play ▶</string>
    <string name="txt">Manuscript</string>
    <string name="transaction">No transaction record</string>
    <string name="cancel">Cancel</string>

    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>

    <string name="unknown">unknown</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于波尼音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="activity_playlist">Playlist</string>
    <string name="comment">Comment</string>
    <string name="commit">Submission</string>
    <string name="comment_hint">Welcome to participate in the exchange. Let\'s leave our insights.</string>
    <string name="center_vip">VIP member center</string>
    <string name="old">Age</string>
    <string name="zoom">Enterprise</string>
    <string name="write_apply_old">Please input your age.</string>
    <string name="write_apply_zoom">Please enter your business.</string>
    <string name="sex">Sex</string>
    <string name="haved_auto_vip">Automatic renewal function has been opened.</string>
    <string name="no_haved_auto_vip">No automatic renewal function has been opened.</string>
    <string name="auto_bt_vip">Open a renewal</string>
    <string name="no_auto_bt_vip">Cancel the renewal</string>
    <string name="apply">Apply</string>
    <string name="point_apply">Purchase PPG open node</string>
    <string name="point_content">&#8195;&#8195;他们坚持并相信区块链技术能改变世界和改善人类生活，是区块链文化与价值的传道与授业者，通过为BC大陆的原居民服务来获得成就感和实际奖励。BC达人是一群有着梦想与智慧的区块链大陆共建者，为打造更好、更适合生存与发展的区块链生态环境而努力。\n\n 付出：\n&#8195;&#8195;深度参与bc大陆社群共建，作为社群节点推广和分享区块链相关课程和文化，让更多人可以参与和共建bc大陆。\n  奖励：\n&#8195;&#8195;活动bc大陆token奖励，可以变现、置换其他虚拟数字资产、或者购买bc大陆商品和服务等，也可以提升bc达人的等级获得更多的权力和福利。</string>
    <string name="point_title">Purchase PPG open node</string>
    <string name="aliPay">Alipay</string>
    <string name="weixin">WeChat</string>
    <string name="point_detail">Fill in node information</string>
    <string name="jump">Skip</string>
    <string name="weixin_num">Wechat number</string>
    <string name="des_detail">Please describe</string>
    <string name="re_apply">Reapply</string>
    <string name="select_gallery">Album</string>
    <string name="select_camera">Photograph</string>
    <string name="select">Select the way to get pictures.</string>
    <string name="collage_buy">Collage purchase</string>
    <string name="delete">Delete</string>
    <string name="less_ppg">Insufficient balance, please recharge.</string>
    <string name="finish_information">Please improve the information.</string>
    <string name="code_fail">Authentication code sent failure</string>
    <string name="bunble_fail">Bindings failure</string>
    <string name="send_fail">Submission failure</string>
    <string name="exit_sure">Press again.</string>
    <string name="vip_c">Member Center</string>
    <string name="bc_card">Activate the BC card</string>
    <string name="newest_book">Latest course</string>
    <string name="save_picture1">小艾</string>
    <string name="save_picture2">小蓝</string>
    <string name="point_reviewed">达人审核</string>

</resources>
