<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            app:srcCompat="@drawable/back" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="11dp">


        <EditText
            android:id="@+id/item_content"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/comment_hint"
            android:lineSpacingExtra="8dp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/secondblack"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sencond_textSize" />

        <TextView
            android:id="@+id/textView_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="140字"
            android:textSize="@dimen/small_textSize" />
    </LinearLayout>
    <Button
        android:id="@+id/b_commit"
        android:textSize="@dimen/textSize"
        android:background="@drawable/yellow_full_circle"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/commit"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
